[package]
name = "manga-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.6"         
zip = "0.6"            
image = "0.23"         
clap = { version = "3", features = ["derive"] } 
tokio = { version = "1", features = ["full"] }  
